hphp/hack/test/typecheck/global_const6.php.exp
File "global_const6.php", line 3, characters 11-15:
Invalid expression in constant initializer (Parsing[1002])
