hphp/hack/test/typecheck/global_const6.php
<?hh

const mixed X = $this;
